Removed Hudson Bay and eastern Greenland from Pb domain, adjusted and created new boundary conditions accordingly

--- a/Pb_model/boundary_conditions/all-boundaries-final.ipynb
+++ b/Pb_model/boundary_conditions/all-boundaries-final.ipynb
@@ -11,27 +11,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt\n",
     "import netCDF4 as nc\n",
     "import numpy as np\n",
     "import datetime\n",
-    "import matplotlib\n",
-    "from mpl_toolkits.basemap import Basemap\n",
-    "import cmocean\n",
     "import csv\n",
     "import pandas as pd\n",
     "import pickle\n",
-    "from matplotlib.patches import Polygon \n",
     "from scipy.signal import savgol_filter\n",
     "import scipy as sc\n",
-    "from matplotlib.patches import ConnectionPatch\n",
     "import gsw\n",
     "\n",
-    "%matplotlib notebook"
+    "%matplotlib inline"
    ]
   },
   {
@@ -43,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,11 +52,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "m      = nc.Dataset('/data/brogalla/run_storage/spin-up0-low-case/ANHA12_EXH006_2002_monthly.nc', 'r')\n",
+    "m      = nc.Dataset('/data/brogalla/run_storage/Mn-set6-202011/ref-2002/ANHA12_EXH006_2002_monthly.nc', 'r')\n",
     "mdepth = np.array(m.variables['deptht'])\n",
     "mlons  = np.array(m.variables['nav_lon'])\n",
     "mlats  = np.array(m.variables['nav_lat'])"
@@ -77,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,12 +183,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "imin, imax = 160, 800\n",
-    "jmin, jmax = 1100, 2050"
+    "jmin, jmax = 1100, 2180"
    ]
   },
   {
@@ -206,18 +200,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ANHA12lat_CB = mesh_lat[jmax,imin+42:imax-1]\n",
-    "Pb_CB        = np.empty_like(mesh_bathy[:,jmax,imin+42:imax-1])\n",
+    "ANHA12lat_CB = mesh_lat[jmax,392:imax-1]\n",
+    "Pb_CB        = np.empty_like(mesh_bathy[:,jmax,392:imax-1])\n",
     "yy_CB, zz_CB = np.meshgrid(ANHA12lat_CB, mdepth)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,14 +267,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Northern boundary condition shape:  (1, 50, 1, 5970)\n"
+      "Northern boundary condition shape:  (1, 50, 1, 4070)\n"
      ]
     }
    ],
@@ -304,18 +298,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ANHA12lon_AO = mesh_lon[1600:jmax,799]\n",
-    "Pb_AO        = np.empty_like(mesh_bathy[:,1600:jmax,799])\n",
+    "ANHA12lon_AO = mesh_lon[1600:jmax-1,799]\n",
+    "Pb_AO        = np.empty_like(mesh_bathy[:,1600:jmax-1,799])\n",
     "xx_AO, zz_AO = np.meshgrid(ANHA12lon_AO, mdepth)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,6 +341,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Eastern boundary condition shape:  (1, 50, 1, 11580)\n"
+     ]
+    }
+   ],
+   "source": [
+    "rimwidthE  = 20\n",
+    "dPb_East   = np.empty((1,50,1,xx_AO.shape[1]*rimwidthE))\n",
+    "dPb_East[0,:,0,:]  = np.tile(smoothed_Pb_AO, rimwidthE)\n",
+    "\n",
+    "print('Eastern boundary condition shape: ', dPb_East.shape)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -359,8 +374,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ANHA12lon_GR = mesh_lon[jmin:1290,799]\n",
-    "Pb_GR        = np.empty_like(mesh_bathy[:,jmin:1290,799])\n",
+    "ANHA12lon_GR = mesh_lon[jmin+1:jmin+36,680]\n",
+    "Pb_GR        = np.empty_like(mesh_bathy[:,jmin+1:jmin+36,680])\n",
     "yy_GR, zz_GR = np.meshgrid(ANHA12lon_GR, mdepth)"
    ]
   },
@@ -405,59 +420,24 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Combined boundary condition:"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "filtered_Pb_E = np.empty_like(mesh_bathy[:,jmin+2:jmax-1,799])\n",
-    "filtered_Pb_E.fill(3) \n",
-    "filtered_Pb_E[:,(1600-jmin-4):-1] = smoothed_Pb_AO\n",
-    "filtered_Pb_E[:,0:(1290-jmin)]    = filtered_Pb_GR"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "xx_E, zz_E  = np.meshgrid(mesh_lon[jmin+2:jmax-1,799], mdepth) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rimwidthE = 20\n",
-    "dPb_East  = np.empty((1,50,1,xx_E.shape[1]*rimwidthE))\n",
-    "dPb_East[0,:,0,:]  = np.tile(filtered_Pb_E , rimwidthE) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Eastern boundary condition shape:  (1, 50, 1, 18940)\n"
+      "South-eastern boundary condition shape:  (1, 50, 1, 700)\n"
      ]
     }
    ],
    "source": [
-    "print('Eastern boundary condition shape: ', dPb_East.shape)"
+    "rimwidthSE    = 20\n",
+    "dPb_SouthEast = np.empty((1,50,1,yy_GR.shape[1]*rimwidthSE))\n",
+    "dPb_SouthEast[0,:,0,:] = np.tile(filtered_Pb_GR, rimwidthSE)\n",
+    "\n",
+    "print('South-eastern boundary condition shape: ', dPb_SouthEast.shape)"
    ]
   },
   {
@@ -469,21 +449,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ANHA12lon_BB = mesh_lon[jmin,imin+42:imax-1]\n",
+    "ANHA12lon_BB = mesh_lon[jmin,442:681]\n",
     "xx, zz = np.meshgrid(ANHA12lon_BB, mdepth) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Pb_BB = np.empty_like(mesh_bathy[:,jmin,imin+42:imax-1])\n",
+    "Pb_BB = np.empty_like(mesh_bathy[:,jmin,442:681])\n",
     "\n",
     "Pb_BB.fill(20)\n",
     "Pb_BB[zz < 20]                               = 12\n",
@@ -498,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -516,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,13 +505,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "rimwidthS          = 10\n",
     "dPb_South          = np.empty((1,50,1,xx.shape[1]*rimwidthS))\n",
     "dPb_South[0,:,0,:] = np.tile(filtered_Pb_BB, rimwidthS) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Southern boundary condition shape:  (1, 50, 1, 2390)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Southern boundary condition shape: ', dPb_South.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Western boundary condition"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ANHA12lon_HB = mesh_lon[1190:1474,292]\n",
+    "xx_HB, zz_HB = np.meshgrid(ANHA12lon_HB, mdepth) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Pb_HB = np.empty_like(mesh_bathy[:,1190:1474,292])\n",
+    "\n",
+    "Pb_HB.fill(12)\n",
+    "# Pb_BB[zz < 20]                               = 12\n",
+    "# Pb_BB[(zz < 20)  & (xx > -50)]               = 16\n",
+    "# Pb_BB[(zz < 100) & (zz > 20)]                = 18\n",
+    "# Pb_BB[(zz < 100) & (zz > 20) & (xx < -50)]   = 14 \n",
+    "# Pb_BB[(zz > 350) & (zz < 1500)]              = 33\n",
+    "# Pb_BB[(zz > 350) & (zz < 1500) & (xx < -41)] = 23 \n",
+    "# Pb_BB[(zz > 350) & (zz < 1500) & (xx > -36)] = 23 \n",
+    "# Pb_BB[zz > 2500]                             = 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "smoothed_Pb_HB1 = np.empty_like(Pb_HB)\n",
+    "smoothed_Pb_HB = np.empty_like(Pb_HB)\n",
+    "\n",
+    "# Smooth vertically (along depth)\n",
+    "for i in range(0, len(Pb_HB[0,:])):\n",
+    "    smoothed_Pb_HB1[:,i] = savgol_filter(Pb_HB[:,i], 21, 3)\n",
+    "\n",
+    "# Smooth horizontally along cross section\n",
+    "for depth in range(0, len(Pb_HB[:,0])):\n",
+    "    smoothed_Pb_HB[depth,:] = savgol_filter(smoothed_Pb_HB1[depth,:], 81, 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rimwidthW          = 10\n",
+    "dPb_West          = np.empty((1,50,1,xx_HB.shape[1]*rimwidthW))\n",
+    "dPb_West[0,:,0,:] = np.tile(smoothed_Pb_HB, rimwidthW) "
    ]
   },
   {
@@ -543,12 +605,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Southern boundary condition shape:  (1, 50, 1, 5970)\n"
+      "Western boundary condition shape:  (1, 50, 1, 2840)\n"
      ]
     }
    ],
    "source": [
-    "print('Southern boundary condition shape: ', dPb_South.shape)"
+    "print('Western boundary condition shape: ', dPb_West.shape)"
    ]
   },
   {
@@ -567,48 +629,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 0 0\n"
+      "0 0 0 0 0\n"
      ]
     }
    ],
    "source": [
     "# Check whether any of the values are zero\n",
-    "print(np.count_nonzero(dPb_South==0), np.count_nonzero(dPb_East==0), np.count_nonzero(dPb_North==0))"
+    "print(np.count_nonzero(dPb_South==0), np.count_nonzero(dPb_East==0), np.count_nonzero(dPb_SouthEast==0), \\\n",
+    "      np.count_nonzero(dPb_North==0), np.count_nonzero(dPb_West==0))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<class 'netCDF4._netCDF4.Dimension'> (unlimited): name = 'time_counter', size = 0"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Setup the new NetCDF file:\n",
-    "ncd = nc.Dataset('/ocean/brogalla/GEOTRACES/data/Pb_OBC-20200403.nc', 'w', zlib=True)\n",
-    "ncd.createDimension('x1',yy_CB.shape[1]*rimwidthN)\n",
-    "ncd.createDimension('x2',xx.shape[1]*rimwidthS)\n",
-    "ncd.createDimension('x3',xx_E.shape[1]*rimwidthE)\n",
-    "ncd.createDimension('y',1)\n",
-    "ncd.createDimension('deptht',50)\n",
-    "ncd.createDimension('time_counter',None)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Setup the new NetCDF file:\n",
+    "ncd = nc.Dataset('/ocean/brogalla/GEOTRACES/data/Pb_OBC-20210225.nc', 'w', zlib=True)\n",
+    "ncd.createDimension('x1',yy_CB.shape[1]*rimwidthN)\n",
+    "ncd.createDimension('x2',xx.shape[1]*rimwidthS)\n",
+    "ncd.createDimension('x3',xx_AO.shape[1]*rimwidthE)\n",
+    "ncd.createDimension('x4',yy_GR.shape[1]*rimwidthSE)\n",
+    "ncd.createDimension('x5',xx_HB.shape[1]*rimwidthW)\n",
+    "ncd.createDimension('y',1)\n",
+    "ncd.createDimension('deptht',50)\n",
+    "ncd.createDimension('time_counter',None)\n",
+    "\n",
     "#Northern BC: Canada Basin\n",
     "dpb_N = ncd.createVariable('dPb_N', 'float64', ('time_counter','deptht','y','x1'))\n",
     "dpb_N.units       = 'pmol/kg'\n",
@@ -623,20 +670,27 @@
     "dpb_S.coordinates = 'nav_lon nav_lat deptht time_counter'\n",
     "dpb_S[:,:,:,:]    = dPb_South*10**(-12)\n",
     "\n",
-    "#Eastern BC: East Greenland and Arctic Ocean\n",
+    "#Eastern BC: North Arctic Ocean\n",
     "dpb_E = ncd.createVariable('dPb_E', 'float64', ('time_counter','deptht','y','x3'))\n",
     "dpb_E.units       = 'pmol/kg'\n",
     "dpb_E.long_name   = 'Dissolved Pb concentration, eastern boundary'  \n",
     "dpb_E.coordinates = 'nav_lon nav_lat deptht time_counter'\n",
-    "dpb_E[:,:,:,:]    = dPb_East*10**(-12)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "dpb_E[:,:,:,:]    = dPb_East*10**(-12)\n",
+    "\n",
+    "#Eastern BC: East Greenland\n",
+    "dpb_SE = ncd.createVariable('dPb_SE', 'float64', ('time_counter','deptht','y','x4'))\n",
+    "dpb_SE.units       = 'pmol/kg'\n",
+    "dpb_SE.long_name   = 'Dissolved Pb concentration, southeastern boundary'  \n",
+    "dpb_SE.coordinates = 'nav_lon nav_lat deptht time_counter'\n",
+    "dpb_SE[:,:,:,:]    = dPb_SouthEast*10**(-12)\n",
+    "\n",
+    "#Western BC: East Greenland\n",
+    "dpb_W = ncd.createVariable('dPb_W', 'float64', ('time_counter','deptht','y','x5'))\n",
+    "dpb_W.units       = 'pmol/kg'\n",
+    "dpb_W.long_name   = 'Dissolved Pb concentration, western boundary'  \n",
+    "dpb_W.coordinates = 'nav_lon nav_lat deptht time_counter'\n",
+    "dpb_W[:,:,:,:]    = dPb_West*10**(-12)\n",
+    "\n",
     "ncd.close()"
    ]
   },
@@ -666,9 +720,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.11"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
