messing around with Pb boundary conditions and parameters for scavenging

--- a/Pb_model/boundary_conditions/all-boundaries-final.ipynb
+++ b/Pb_model/boundary_conditions/all-boundaries-final.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 251,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 252,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 374,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,27 +211,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 375,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Pb_CB[zz_CB < 20]                                   = 5 \n",
-    "Pb_CB[(zz_CB > 20) & (zz_CB < 50)]                  = 4\n",
-    "Pb_CB[(zz_CB < 50) & (yy_CB < 72.3)]                = 3 \n",
-    "Pb_CB[(zz_CB > 50) & (zz_CB < 100) & (yy_CB < 74)]  = 12\n",
-    "Pb_CB[(zz_CB > 50) & (zz_CB < 100) & (yy_CB > 74)]  = 8  \n",
-    "Pb_CB[(zz_CB > 100) & (zz_CB < 400)]                = 6\n",
-    "Pb_CB[(zz_CB > 400) & (zz_CB < 800)]                = 5 \n",
-    "Pb_CB[(zz_CB > 300) & (zz_CB < 700) & (yy_CB > 75)] = 5\n",
-    "Pb_CB[(zz_CB > 250) & (zz_CB < 700) & (yy_CB > 77)] = 4\n",
-    "Pb_CB[(zz_CB > 700) & (zz_CB < 800) & (yy_CB > 75)] = 3 \n",
-    "Pb_CB[(zz_CB > 800) & (zz_CB < 2000)]               = 4 \n",
-    "Pb_CB[zz_CB > 2000]                                 = 3"
+    "# Pb_CB[zz_CB < 20]                                   = 5 \n",
+    "# # Pb_CB[(zz_CB > 20) & (zz_CB < 50)]                  = 4\n",
+    "# # Pb_CB[(zz_CB < 50) & (yy_CB < 72.3)]                = 3 \n",
+    "# # Pb_CB[(zz_CB > 50) & (zz_CB < 100) & (yy_CB < 74)]  = 12\n",
+    "# # Pb_CB[(zz_CB > 50) & (zz_CB < 100) & (yy_CB > 74)]  = 8  \n",
+    "# # Pb_CB[(zz_CB > 100) & (zz_CB < 400)]                = 6\n",
+    "# # Pb_CB[(zz_CB > 400) & (zz_CB < 800)]                = 5 \n",
+    "# # Pb_CB[(zz_CB > 300) & (zz_CB < 700) & (yy_CB > 75)] = 5\n",
+    "# # Pb_CB[(zz_CB > 250) & (zz_CB < 700) & (yy_CB > 77)] = 4\n",
+    "# # Pb_CB[(zz_CB > 700) & (zz_CB < 800) & (yy_CB > 75)] = 3 \n",
+    "# # Pb_CB[(zz_CB > 800) & (zz_CB < 2000)]               = 2 \n",
+    "# Pb_CB[zz_CB > 2000]                                 = 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 376,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Pb_CB.fill(2) \n",
+    "Pb_CB[zz_CB < 50]                          = 5 \n",
+    "Pb_CB[(zz_CB < 70) & (yy_CB < 72.5)]       = 6 \n",
+    "Pb_CB[(zz_CB < 100) & (zz_CB > 50)]        = 4 \n",
+    "Pb_CB[(zz_CB < 300) & (zz_CB > 100)]       = 3\n",
+    "Pb_CB[(zz_CB > 300)]                       = 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 377,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +254,7 @@
     "\n",
     "# Smooth vertically (along depth)\n",
     "for i in range(0, len(Pb_CB[0,:])):\n",
-    "    smoothed_Pb_CB1[:,i] = savgol_filter(Pb_CB[:,i], 15, 3)\n",
+    "    smoothed_Pb_CB1[:,i] = savgol_filter(Pb_CB[:,i], 23, 3)\n",
     "\n",
     "# Smooth horizontally along cross section\n",
     "for depth in range(0, len(Pb_CB[:,0])):\n",
@@ -256,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 378,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 379,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 380,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,22 +323,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 381,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Pb_AO.fill(3) \n",
-    "Pb_AO[zz_AO < 50]                     = 5 \n",
-    "Pb_AO[(zz_AO > 50)  & (zz_AO < 100)]  = 8 \n",
-    "Pb_AO[(zz_AO > 100) & (zz_AO < 400)]  = 6 \n",
-    "Pb_AO[(zz_AO > 400) & (zz_AO < 800)]  = 3 \n",
-    "Pb_AO[(zz_AO > 800) & (zz_AO < 2000)] = 4\n",
-    "Pb_AO[zz_AO > 2000]                   = 3"
+    "# Pb_AO.fill(3) \n",
+    "# Pb_AO[zz_AO < 50]                     = 5 \n",
+    "# Pb_AO[(zz_AO > 50)  & (zz_AO < 100)]  = 8 \n",
+    "# Pb_AO[(zz_AO > 100) & (zz_AO < 400)]  = 6 \n",
+    "# Pb_AO[(zz_AO > 400) & (zz_AO < 800)]  = 3 \n",
+    "# Pb_AO[(zz_AO > 800) & (zz_AO < 2000)] = 4\n",
+    "# Pb_AO[zz_AO > 2000]                   = 3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 382,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Pb_AO.fill(3) \n",
+    "Pb_AO[zz_AO < 50]                    = 5 \n",
+    "Pb_AO[zz_AO > 500]                   = 3\n",
+    "Pb_AO[(zz_AO > 50) & (xx_AO < -160)] = 2 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 386,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,12 +363,12 @@
     "\n",
     "# Smooth horizontally along cross section\n",
     "for depth in range(0, len(Pb_AO[:,0])):\n",
-    "    smoothed_Pb_AO[depth,:] = savgol_filter(smoothed_Pb_AO1[depth,:], 31, 3)"
+    "    smoothed_Pb_AO[depth,:] = savgol_filter(smoothed_Pb_AO1[depth,:], 19, 3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 387,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 388,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,20 +407,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 389,
    "metadata": {},
    "outputs": [],
    "source": [
     "Pb_GR.fill(20) \n",
-    "Pb_GR[zz_GR < 50]                                                        = 16 \n",
-    "Pb_GR[(zz_GR > 350) & (zz_GR < 1500) & (yy_GR < 63.5) & (yy_GR > 61.5)]  = 23 \n",
-    "Pb_GR[(zz_GR > 350) & (zz_GR < 1500) & (yy_GR < 64) & (yy_GR < 61)]      = 18 \n",
-    "Pb_GR[zz_GR > 2000]                                                      = 10"
+    "Pb_GR[zz_GR < 50]                                      = 25 \n",
+    "Pb_GR[(zz_GR > 350) & (zz_GR < 1500) & (yy_GR < 60) ]  = 33\n",
+    "Pb_GR[zz_GR > 2000]                                    = 10"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 390,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 391,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 392,
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 393,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -459,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 394,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,15 +495,15 @@
     "Pb_BB[(zz < 20)  & (xx > -50)]               = 16\n",
     "Pb_BB[(zz < 100) & (zz > 20)]                = 18\n",
     "Pb_BB[(zz < 100) & (zz > 20) & (xx < -50)]   = 14 \n",
-    "Pb_BB[(zz > 350) & (zz < 1500)]              = 33\n",
-    "Pb_BB[(zz > 350) & (zz < 1500) & (xx < -41)] = 23 \n",
-    "Pb_BB[(zz > 350) & (zz < 1500) & (xx > -36)] = 23 \n",
+    "# Pb_BB[(zz > 350) & (zz < 1500)]              = 33\n",
+    "Pb_BB[(zz > 350) & (zz < 1500) & (xx < -41)] = 33 \n",
+    "Pb_BB[(zz > 350) & (zz < 1500) & (xx < -52)] = 23 \n",
     "Pb_BB[zz > 2500]                             = 10"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 395,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -496,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 396,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -505,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 397,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -516,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 398,
    "metadata": {},
    "outputs": [
     {
@@ -540,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 399,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -550,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 400,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -569,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 401,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -587,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 402,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -598,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 403,
    "metadata": {},
    "outputs": [
     {
@@ -622,14 +647,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 404,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 0 0 0 0\n"
+      "0 560 0 33930 0\n"
      ]
     }
    ],
@@ -641,12 +666,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 406,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Setup the new NetCDF file:\n",
-    "ncd = nc.Dataset('/ocean/brogalla/GEOTRACES/data/Pb_OBC-20210225.nc', 'w', zlib=True)\n",
+    "ncd = nc.Dataset('/ocean/brogalla/GEOTRACES/data/Pb_OBC-20210302.nc', 'w', zlib=True)\n",
     "ncd.createDimension('x1',yy_CB.shape[1]*rimwidthN)\n",
     "ncd.createDimension('x2',xx.shape[1]*rimwidthS)\n",
     "ncd.createDimension('x3',xx_AO.shape[1]*rimwidthE)\n",
