--- a/paper2-figures/E2-SPM-estimate.ipynb
+++ b/paper2-figures/E2-SPM-estimate.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
     "import ariane as ar\n",
     "import seaborn as sns\n",
     "\n",
-    "%matplotlib notebook"
+    "%matplotlib inline"
    ]
   },
   {
@@ -3048,9 +3048,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.11"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
