Current state of paper 1 notebooks (i.e. before I tidy them up)

--- a/paper1/figures/R4a-component-contribution-calculations.ipynb
+++ b/paper1/figures/R4a-component-contribution-calculations.ipynb
@@ -36,15 +36,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "imin, imax = 1480, 2180\n",
-    "jmin, jmax = 160, 800\n",
+    "imin, imax = 1479, 2179\n",
+    "jmin, jmax = 159, 799\n",
     "isize = imax-imin\n",
     "jsize = jmax-jmin\n",
     "\n",
     "# model result set:\n",
-    "folder_ref      = '/data/brogalla/run_storage/Mn-reference-202103/'\n",
-    "folder_cleanice = '/data/brogalla/run_storage/Mn-clean-ice-202103/'\n",
-    "folder_spm      = '/data/brogalla/run_storage/Mn-spm-202103/'\n",
+    "folder_ref      = '/data/brogalla/run_storage/Mn-reference-202110/'\n",
+    "folder_cleanice = '/data/brogalla/run_storage/Mn-clean-ice-202110/'\n",
+    "folder_spm      = '/data/brogalla/run_storage/Mn-spm-202110/'\n",
+    "folder_bio      = '/data/brogalla/run_storage/Mn-bio-202110/'\n",
     "\n",
     "colors = ['#ccb598', '#448d90', '#739f78', '#CC8741', '#cee7fd', '#b9c1c7']"
    ]
@@ -160,9 +161,11 @@
     "    # Calculate the contribution of the model components by region:\n",
     "    \n",
     "    if experiment=='spm':\n",
-    "        folder_year = folder_spm + f'ref-{year}-spm-202103/'\n",
+    "        folder_year = folder_spm + f'ANHA12_spm-{year}_20211026/'\n",
+    "    elif experiment=='bio':\n",
+    "        folder_year = folder_bio + f'ANHA12_bio-{year}_20211022/'\n",
     "    else:\n",
-    "        folder_year = folder_ref + f'ref-{year}-202103/'\n",
+    "        folder_year = folder_ref + f'ANHA12_ref-{year}_20211012/'\n",
     "    \n",
     "    dmn_mriv, dmn_mpriv, dmn_msed, dmn_msedice, dmn_matm, dmn_mice, dmn_mred, dmn_moxi = \\\n",
     "                    load_results(folder_year, year, experiment)\n",
@@ -902,7 +905,7 @@
     "    \n",
     "    sip.legend(loc=(0.05, 0.8), frameon=False)\n",
     "    \n",
-    "# fig.savefig('/ocean/brogalla/GEOTRACES/figures/D1-annual-sea-ice-melt-'+ \\\n",
+    "# fig.savefig('/ocean/brogalla/GEOTRACES/figures/paper1-202110/D1-annual-sea-ice-melt-'+ \\\n",
     "#             str(date.today().strftime('%Y%m%d'))+'.png', bbox_inches='tight',dpi=300)"
    ]
   }
