--- a/paper1/figures/R4b-source-and-sink-budget.ipynb
+++ b/paper1/figures/R4b-source-and-sink-budget.ipynb
@@ -38,13 +38,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "imin, imax = 1480, 2180\n",
-    "jmin, jmax = 160, 800\n",
+    "imin, imax = 1479, 2179\n",
+    "jmin, jmax = 159, 779\n",
     "isize = imax-imin\n",
     "jsize = jmax-jmin\n",
     "\n",
     "# model results:\n",
-    "results_folder = '/data/brogalla/run_storage/Mn-reference-202103/'\n",
+    "results_folder = '/data/brogalla/run_storage/Mn-reference-202110/'\n",
     "month = 8\n",
     "\n",
     "# colours:\n",
@@ -282,9 +282,8 @@
    "source": [
     "def calculate_contribution(year, output=False):\n",
     "    # Calculate the contribution of the model components to Canada Basin specifically\n",
-    "    \n",
-    "    \n",
-    "    folder_year = f'ref-{year}-202103/'\n",
+    "        \n",
+    "    folder_year = f'ANHA12_ref-{year}_20211012/'\n",
     "    dmn_mriv, dmn_msed, dmn_msedice, dmn_matm, dmn_mice, dmn_mred, dmn_moxi = load_results(results_folder+\\\n",
     "                                                                                           folder_year, year)\n",
     "    # moles per second\n",
