--- a/paper1/figures/S6-euphotic-zone-depth.ipynb
+++ b/paper1/figures/S6-euphotic-zone-depth.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,12 +30,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "imin, imax = 1480, 2180\n",
-    "jmin, jmax = 160, 800\n",
+    "imin, imax = 1479, 2179\n",
+    "jmin, jmax = 159, 799\n",
     "\n",
     "isize = imax-imin\n",
     "jsize = jmax-jmin"
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,21 +66,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Define euphotic zone depth:"
+    "Load euphotic zone depth:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "euphotic_depth = np.zeros(lons.shape)\n",
-    "euphotic_depth[:] = 70\n",
-    "euphotic_depth[(mbathy == 43)] = 65\n",
-    "euphotic_depth[(mbathy == 42)] = 60\n",
-    "euphotic_depth[(mbathy == 41)] = 55\n",
-    "euphotic_depth[(mbathy <= 40)] = 50 # depth level mbathy = 509"
+    "euph = nc.Dataset('/ocean/brogalla/GEOTRACES/data/euphotic-20210811.nc')\n",
+    "euphotic_depth = np.array(euph.variables['euphotic'])"
    ]
   },
   {
@@ -92,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +117,7 @@
     "CBar.set_label(label='Euphotic zone depth [m]',size=8)\n",
     "CBar.ax.tick_params(labelsize=8)\n",
     "\n",
-    "# fig.savefig('/ocean/brogalla/GEOTRACES/figures/paper1-202110/S6-euphotic-depth.png',bbox_inches='tight', dpi=300)"
+    "fig.savefig('/ocean/brogalla/GEOTRACES/figures/paper1-202110/S6-euphotic-depth.png',bbox_inches='tight', dpi=300)"
    ]
   },
   {
