--- a/paper2/forcing/rivers/apply_concentrations_to_classification.ipynb
+++ b/paper2/forcing/rivers/apply_concentrations_to_classification.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,10 +130,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "rclass = nc.Dataset(f'/ocean/brogalla/GEOTRACES/data/river_class-202005.nc','r')\n",
+    "river_class = np.array(rclass.variables['rclass'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2400, 1632)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "river_class.shape"
+   ]
   }
  ],
  "metadata": {
